# ARII-Toolkit

./: .gitignore  CMakeLists.txt  menu_exe_imports.txt  readme.md
include/: Exports.h  Fakewin.h  Monitor.h  WindowsInterface.h  spel.h
modules/: AR2Inifile.cpp  AR2Inifile.h  Inifile.cpp  Inifile.h  Logging.cpp
modules/ren/: Exceptions.hpp  Logging.h  Stringtools.hpp
res/: Exports.def
src/: ARII_starter.cpp  Exports.cpp  InifileTest.cpp  Monitor.cpp  WindowsInterface.cpp  spel.cpp  winmm.cpp
